--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,34 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeActivity"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     >
 
-<android.support.design.widget.AppBarLayout
-    android:id="@+id/appbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-  <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
+  <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      />
-</android.support.design.widget.AppBarLayout>
+      android:layout_height="match_parent"
+      tools:context=".ui.home.HomeActivity"
+      >
 
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/rvDoctors"
-      android:layout_width="0dp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/appbar"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:layout_height="0dp"
-      tools:listitem="@android:layout/simple_list_item_multiple_choice"
-      />
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        >
+      <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="?actionBarSize"
+          app:contentInsetEnd="0dp"
+          app:contentInsetLeft="0dp"
+          app:title=""
+          app:contentInsetRight="0dp"
+          app:contentInsetStart="0dp"
+          >
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_marginEnd="16dp"
+            android:layout_height="match_parent"
+            >
+        <ImageView
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:src="@drawable/betterdoctor_logo"
+            />
 
-</android.support.constraint.ConstraintLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
+      </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvDoctors"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar"
+        tools:listitem="@android:layout/simple_list_item_multiple_choice"
+        />
+
+  </android.support.constraint.ConstraintLayout>
+  <android.support.design.widget.NavigationView
+      android:id="@+id/nav_view"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_gravity="start"
+      android:background="@android:color/white"
+      android:fitsSystemWindows="true"
+      app:headerLayout="@layout/nav_header_login"
+      app:itemTextColor="#919191"
+      app:menu="@menu/activity_login_drawer"
+      />
+</android.support.v4.widget.DrawerLayout>
