--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
+  <color name="colorPrimary">#40444F</color>
+  <color name="colorPrimaryDark">#292a2e</color>
+  <color name="colorPrimaryLight">#93959c</color>
+  <color name="colorAccent">#B3369A</color>
+  <color name="white">#FFFFFF</color>
+  <color name="black">#000000</color>
+
 </resources>
