--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-      android:id="@+id/action_add"
+      android:id="@+id/action_search"
       android:title="Search"
       app:showAsAction="always"
       android:icon="@drawable/ic_search"
